# denden-lab-vote

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  manage.py  package.json  pyproject.toml  requirements.txt
denden_lab_vote/: asgi.py  urls.py  wsgi.py
denden_lab_vote/settings/: base.py  dev.py  prod.py
dumpdata/: lab.json
nginx/: nginx.conf
postgres_data/: postmaster.pid
postgres_data/base/13757/: 1247  1249  16398  16400  16407  16446  16448  16455  16457  16469  16471  16484  16485  16486  16498  16499  16507  16520  16526  16534  16537  16538  2606  2608  2610  2658  2659  2663  2704  pg_internal.init
postgres_data/global/: pg_control  pg_internal.init
postgres_data/pg_stat/: db_0.stat  db_13757.stat  global.stat
postgres_data/pg_stat_tmp/: db_0.stat  db_13757.stat  global.stat
static/vote_site/css/: base.css  base.css.map  form.css  form.css.map  list.css  list.css.map  policy.css  policy.css.map  reset.css  reset.css.map
vote_site/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
vote_site/migrations/: 0001_initial.py  0002_alter_user_vote1_alter_user_vote2_alter_user_vote3_and_more.py  0003_alter_user_year.py  0004_alter_user_vote1_alter_user_vote2_alter_user_vote3_and_more.py  0005_alter_lab_belongs_to.py  0006_vote_delete_user.py  0007_vote_is_active.py
vote_site/static/vote_site/css/: base.css  base.scss  form.css  form.scss  list.css  list.scss  policy.css  (+3 more)
vote_site/templates/: base.html  email_sent.html  form.html  lab_list.html  policy.html  vote_complete.html
