[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
extend-exclude = 'migrations/'
line-length = 100

[tool.isort]
extend_skip = ['migrations']
known_django = ['django']
line_length = 100
profile = 'black'
sections = 'FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER'

[tool.poetry]
authors = ["DeMiA inc."]
description = ""
name = "denden-lab-vote"
version = "0.1.0"

[tool.poetry.dependencies]
Django = "^4.0.1"
dj-database-url = "^0.5.0"
django-bootstrap3 = "^21.2"
django-compressor = "^3.1"
django-debug-toolbar = "^3.2.4"
django-environ = "^0.8.1"
django-sass-processor = {extras = ["management-command"], version = "^1.1"}
libsass = "^0.21.0"
psycopg2-binary = "^2.9.3"
python = "^3.8"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pre-commit = "^2.16.0"
pylint = "^2.12.2"
toml-sort = "^0.19.0"
